--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,22 @@
   = stylesheet_link_tag    'application', media: 'all'
   = javascript_include_tag 'application'
 %body
-  - flash.each do |name, msg|
-    = content_tag :div, msg, class: "alert alert-info"
+
+  %nav.navbar.navbar-default
+    .container
+      .navbar-brand= link_to "Pinterest Clone", root_path
+      - if user_signed_in?
+        %ul.nav.navbar-nav.navbar-right
+          %li= link_to "New Pin", new_pin_path
+          %li= link_to "Account Settings", edit_user_registration_path
+          %li= link_to "Sign Out", destroy_user_session_path, method: :delete
+      - else
+        %ul.nav.navbar-nav.navbar-right
+          %li= link_to "Sign Up", new_user_registration_path
+          %li= link_to "Sign In", new_user_session_path
+
+  .container
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: "alert alert-info"
+
   = yield
